@@ -1,6 +1,13 @@
 2019-06-15 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/gen.c,
+	  src/z80/ralloc.c,
+	  src/z80/ralloc2.cc:
+	  Handle iy more like other registers in the new register allocator.
+
+2019-06-15 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/gen.c,
 	  src/z80/ralloc2.cc:
 	  Minor register allocation improvement,
 	  fix a --reserve-regs-iy issue.
